# tree-sitter-poe

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example.filter  go.mod  grammar.js  package.json  parser.dylib  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-path_of_exile.h  tree-sitter-path_of_exile.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_path_of_exile/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPathOfExileTests/: TreeSitterPathOfExileTests.swift
queries/: highlights.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
