[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-path-of-exile"
description = "Tree-sitter plugin for Path of Exile .filter files."
version = "0.0.1"
keywords = ["incremental", "parsing", "tree-sitter", "path-of-exile"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "egibs", email = "evan@egibs.xyz" }]
requires-python = ">=3.9"
license.text = "Apache License 2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github/egibs/tree-sitter-poe"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
